tests/snapshots/convert__Directive__vHtml.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    innerHTML: "<div></div>"
}, null);

