tests/snapshots/convert__Directive__vModel_with_key.snap
---
source: tests/convert.rs
expression: code
---
import { resolveComponent, createVNode } from "vue";
(()=>{
    const _v = resolveComponent("A");
    return createVNode(_v, {
        key: a,
        "onUpdate:key": ($v)=>a = $v
    }, null, 8, [
        "key"
    ]);
})();

