tests/snapshots/convert__Directive__vShow.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode, vShow, withDirectives } from "vue";
withDirectives(createVNode("div", null, null, 512), [
    [
        vShow,
        a
    ]
]);

