tests/snapshots/convert__Directive__vSlots.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", null, slots, 1024);

