tests/snapshots/convert__Directive__vText.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    textContent: "text1"
}, null);

